// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteUIConversionEvent 1`] = `
Object {
  "Key": Object {
    "eventKey": Object {
      "S": "type|0x0",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "uiEvents_dev",
}
`;

exports[`getLastPriceFromStatus 1`] = `
Object {
  "bitfinex": Object {
    "address": "0x0",
    "price": 617.38,
    "timestamp": 1528081780000,
  },
  "gdax": Object {
    "address": "0x0",
    "price": 616.14,
    "timestamp": 1528081164613,
  },
  "gemini": Object {
    "address": "0x0",
    "price": 617.67,
    "timestamp": 1528081767414,
  },
  "kraken": Object {
    "address": "0x0",
    "price": 617.85,
    "timestamp": 1528081700549,
  },
}
`;

exports[`insertUIConversion 1`] = `
Object {
  "Item": Object {
    "duoFee": Object {
      "N": "0",
    },
    "eth": Object {
      "N": "123",
    },
    "ethFee": Object {
      "N": "0.123",
    },
    "eventKey": Object {
      "S": "Create|0x0",
    },
    "systime": Object {
      "N": "1234567890",
    },
    "tokenA": Object {
      "N": "456",
    },
    "tokenB": Object {
      "N": "456",
    },
    "transactionHash": Object {
      "S": "0x123",
    },
  },
  "TableName": "uiEvents_dev",
}
`;

exports[`insertUIConversion 2`] = `
Object {
  "Item": Object {
    "duoFee": Object {
      "N": "0.123",
    },
    "eth": Object {
      "N": "123",
    },
    "ethFee": Object {
      "N": "0",
    },
    "eventKey": Object {
      "S": "Redeem|0x0",
    },
    "systime": Object {
      "N": "1234567890",
    },
    "tokenA": Object {
      "N": "456",
    },
    "tokenB": Object {
      "N": "456",
    },
    "transactionHash": Object {
      "S": "0x123",
    },
  },
  "TableName": "uiEvents_dev",
}
`;

exports[`parseAcceptedPrices 1`] = `
Array [
  Object {
    "blockNumber": 7722428,
    "navA": 1.000595,
    "navB": 1.0080258291803725,
    "price": 525.469771414597,
    "timestamp": 1529625600000,
    "transactionHash": "0x180245f592adfd86dfb49a48c6c9b59d6be7a8d9c897ebd5492f0823c5196008",
  },
  Object {
    "blockNumber": 7722781,
    "navA": 1.000612,
    "navB": 1.0035985102209515,
    "price": 524.316,
    "timestamp": 1529629200000,
    "transactionHash": "0x4da754a05a29dd84a26a81db5a6d437be018971c652a94d0c706128bad63dc87",
  },
  Object {
    "blockNumber": 7723130,
    "navA": 1.000629,
    "navB": 0.9550144311357961,
    "price": 511.6105,
    "timestamp": 1529632800000,
    "transactionHash": "0x298dc4d2771805df61894777a6a2eee702d222ab51c1c5239d890d66412b64e0",
  },
  Object {
    "blockNumber": 7723483,
    "navA": 1.000646,
    "navB": 0.9702581491704366,
    "price": 515.6028144780677,
    "timestamp": 1529636400000,
    "transactionHash": "0xef0aab40c21251ddbed21d03f43f81a0e000b651a355dc2e0ac6bdd2934e449d",
  },
  Object {
    "blockNumber": 7723836,
    "navA": 1.000663,
    "navB": 0.9728057034275613,
    "price": 516.2737204647499,
    "timestamp": 1529640000000,
    "transactionHash": "0x060f2496b45b7d11908549bb4e3e1a6cc789692caf24c9f632daf5e23ce3a481",
  },
]
`;

exports[`parseConversion 1`] = `
Array [
  Object {
    "blockNumber": 7715602,
    "duoFee": 0.8,
    "eth": 0.1,
    "ethFee": 0,
    "timestamp": 1529559912000,
    "tokenA": 26.160725,
    "tokenB": 26.160725,
    "transactionHash": "0x7283db82115b77c3fa055ec1553acf7c16d3ba1e2db5b2cea1974ba32bad29dc",
    "type": "Create",
  },
]
`;

exports[`parseHourly 1`] = `
Array [
  Object {
    "close": 622.68,
    "date": "2018-06-04",
    "high": 625.04,
    "hour": "00",
    "low": 619.39,
    "minute": 0,
    "open": 619.39,
    "source": "BITFINEX",
    "timestamp": 1528070400000,
    "volume": 9626.950549620002,
  },
]
`;

exports[`parseMinutely 1`] = `
Array [
  Object {
    "close": 582.89,
    "date": "2018-06-01",
    "high": 582.89,
    "hour": "07",
    "low": 582.88,
    "minute": 53,
    "open": 582.88,
    "source": "GDAX",
    "timestamp": 1527839580000,
    "volume": 12.117600000000001,
  },
]
`;

exports[`parseStatus 1`] = `
Array [
  Object {
    "block": 7535634,
    "process": "CHAIN_AWS_PUBLIC",
    "timestamp": 1527846160749,
  },
  Object {
    "process": "EVENT_AWS_PRIVATE_STARTPRERESET",
    "timestamp": 1527751553589,
  },
  Object {
    "process": "EVENT_AWS_PRIVATE_STARTRESET",
    "timestamp": 1527751833800,
  },
  Object {
    "process": "EVENT_AZURE_PRIVATE_STARTPRERESET",
    "timestamp": 1527752331975,
  },
  Object {
    "process": "EVENT_AZURE_PRIVATE_STARTRESET",
    "timestamp": 1527751947443,
  },
  Object {
    "process": "EVENT_GCP_PRIVATE_STARTPRERESET",
    "timestamp": 1527752140470,
  },
  Object {
    "process": "EVENT_GCP_PRIVATE_STARTRESET",
    "timestamp": 1527752036379,
  },
  Object {
    "process": "FEED_AWS_PRIVATE",
    "timestamp": 1527851700049,
  },
  Object {
    "process": "FEED_AZURE_PRIVATE",
    "timestamp": 1527758100003,
  },
  Object {
    "process": "FEED_GCP_PRIVATE",
    "timestamp": 1527757500018,
  },
  Object {
    "process": "HOURLY_AWS_PUBLIC",
    "timestamp": 1528081753755,
  },
  Object {
    "process": "MINUTELY_AWS_PUBLIC",
    "timestamp": 1528081764433,
  },
  Object {
    "price": 573.84,
    "process": "PRICE_AWS_PRIVATE_BITFINEX",
    "timestamp": 1527831872000,
    "volume": 2,
  },
  Object {
    "price": 568.74,
    "process": "PRICE_AWS_PRIVATE_GDAX",
    "timestamp": 1527756997255,
    "volume": 0.112,
  },
  Object {
    "price": 568.9,
    "process": "PRICE_AWS_PRIVATE_GEMINI",
    "timestamp": 1527757021801,
    "volume": 0.034274,
  },
  Object {
    "price": 567.99,
    "process": "PRICE_AWS_PRIVATE_KRAKEN",
    "timestamp": 1527756882730,
    "volume": 1.3,
  },
  Object {
    "price": 617.38,
    "process": "PRICE_AWS_PUBLIC_BITFINEX",
    "timestamp": 1528081780000,
    "volume": 1.608,
  },
  Object {
    "price": 616.14,
    "process": "PRICE_AWS_PUBLIC_GDAX",
    "timestamp": 1528081164613,
    "volume": 6.52551355,
  },
  Object {
    "price": 617.67,
    "process": "PRICE_AWS_PUBLIC_GEMINI",
    "timestamp": 1528081767414,
    "volume": 0.021854,
  },
  Object {
    "price": 617.85,
    "process": "PRICE_AWS_PUBLIC_KRAKEN",
    "timestamp": 1528081700549,
    "volume": 1.13,
  },
  Object {
    "price": 569.89,
    "process": "PRICE_AZURE_PRIVATE_BITFINEX",
    "timestamp": 1527757209000,
    "volume": 0.02548273,
  },
  Object {
    "price": 569.09,
    "process": "PRICE_AZURE_PRIVATE_GDAX",
    "timestamp": 1527757217889,
    "volume": 0.69683,
  },
  Object {
    "price": 569.01,
    "process": "PRICE_AZURE_PRIVATE_GEMINI",
    "timestamp": 1527757197779,
    "volume": 0.714947,
  },
  Object {
    "price": 569.3,
    "process": "PRICE_AZURE_PRIVATE_KRAKEN",
    "timestamp": 1527757210567,
    "volume": 0.29453729,
  },
  Object {
    "price": 575.97,
    "process": "PRICE_GCP_PRIVATE_BITFINEX",
    "timestamp": 1527766704000,
    "volume": 5.16121098,
  },
  Object {
    "price": 575,
    "process": "PRICE_GCP_PRIVATE_GDAX",
    "timestamp": 1527766704262,
    "volume": 0.7576,
  },
  Object {
    "price": 575.41,
    "process": "PRICE_GCP_PRIVATE_GEMINI",
    "timestamp": 1527766669797,
    "volume": 0.005219,
  },
  Object {
    "price": 575.04,
    "process": "PRICE_GCP_PRIVATE_KRAKEN",
    "timestamp": 1527766688094,
    "volume": 0.2,
  },
]
`;

exports[`parseTotalSupply 1`] = `
Array [
  Object {
    "blockNumber": 7650502,
    "timestamp": 1528862200000,
    "tokenA": 0,
    "tokenB": 0,
    "transactionHash": "0xd7c9bf35f925a8353032cfe1178439617997d6e27484465d393de3d38f8331ab",
  },
  Object {
    "blockNumber": 7651095,
    "timestamp": 1528867600000,
    "tokenA": 0,
    "tokenB": 0,
    "transactionHash": "0xe35137d392e20dd2025cd996de73a271ebcea23128a89f7f423b326ce20893e5",
  },
]
`;

exports[`parseUIConversion 1`] = `
Array [
  Object {
    "blockNumber": 0,
    "duoFee": 0,
    "eth": 0.21704519241528358,
    "ethFee": 0.0021704519241528357,
    "pending": true,
    "timestamp": 1529317121530,
    "tokenA": 36.9599025612444,
    "tokenB": 36.9599025612444,
    "transactionHash": "0x8e59dff2458a76b2ba0a9e11413e603cddc227d663a8bf7b45e0241f3896424d",
    "type": "Create",
  },
]
`;

exports[`parseUIConversion 2`] = `
Array [
  Object {
    "blockNumber": 0,
    "duoFee": 2.0051663085602844,
    "eth": 0.20051663085602844,
    "ethFee": 0,
    "pending": true,
    "timestamp": 1529317783500,
    "tokenA": 34.14530889109876,
    "tokenB": 34.14530889109876,
    "transactionHash": "0x94ea38c42188eaacfa75ad0a091866b46f4c75993d33c94c8cc22822433ca244",
    "type": "Redeem",
  },
]
`;

exports[`queryAcceptPriceEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "AcceptPrice|date1",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryAcceptPriceEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "AcceptPrice|date2",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryConversionEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Create|date1|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryConversionEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Redeem|date1|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryConversionEvent 3`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Create|date2|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryConversionEvent 4`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Redeem|date2|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryHourlyOHLC 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDate": Object {
      "S": "src|date1",
    },
  },
  "KeyConditionExpression": "sourceDate = :sourceDate",
  "TableName": "hourly_dev",
}
`;

exports[`queryHourlyOHLC 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDate": Object {
      "S": "src|date2",
    },
  },
  "KeyConditionExpression": "sourceDate = :sourceDate",
  "TableName": "hourly_dev",
}
`;

exports[`queryMinutelyOHLC 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHour": Object {
      "S": "src|date1",
    },
  },
  "KeyConditionExpression": "sourceDateHour = :sourceDateHour",
  "TableName": "minutely_dev",
}
`;

exports[`queryMinutelyOHLC 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHour": Object {
      "S": "src|date2",
    },
  },
  "KeyConditionExpression": "sourceDateHour = :sourceDateHour",
  "TableName": "minutely_dev",
}
`;

exports[`queryTotalSupplyEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "TotalSupply|date1",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryTotalSupplyEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "TotalSupply|date2",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryUIConversionEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Create|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "uiEvents_dev",
}
`;

exports[`queryUIConversionEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Redeem|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "uiEvents_dev",
}
`;

exports[`scanStatus 1`] = `
Object {
  "TableName": "status_dev",
}
`;
